<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgViewProfile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_user_image_place_holder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewName"
                android:contentDescription="@string/contentDescription" />
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toTopOf="@+id/imgViewProfile"
                app:layout_constraintBottom_toTopOf="@+id/textViewMail"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_mail"
                android:gravity="center"
                android:textSize="12sp"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                app:layout_constraintBottom_toTopOf="@+id/textViewOnlineStatus"
                android:layout_marginStart="10dp"
                app:drawableStartCompat="@drawable/ic_email" />
            <TextView
                android:id="@+id/textViewOnlineStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_online_status"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textViewMail"
                app:layout_constraintTop_toBottomOf="@+id/textViewMail"
                app:layout_constraintBottom_toBottomOf="@+id/imgViewProfile" />

            <ImageView
                android:id="@+id/imageViewFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/contentDescription" />
            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/rating_sample"
                android:gravity="center"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableStartCompat="@drawable/ic_star_rate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>