<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PatientProfileFragment">

    <ImageView
        android:id="@+id/imgViewBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUserDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBackBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardViewDocterAllDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imgViewProfile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_user_image_place_holder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewName"/>
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toTopOf="@+id/imgViewProfile"
                app:layout_constraintBottom_toTopOf="@+id/textViewBmi"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/textViewBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_bmi"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                app:layout_constraintBottom_toTopOf="@+id/textViewGender"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_gender"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewBmi"
                app:layout_constraintEnd_toStartOf="@+id/textViewAge"
                app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_age"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textViewGender"
                app:layout_constraintTop_toBottomOf="@+id/textViewBmi"
                app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_mobile"
                android:gravity="center"
                android:textSize="12sp"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toStartOf="@+id/textViewGender"
                app:layout_constraintTop_toBottomOf="@+id/textViewGender"
                app:layout_constraintBottom_toBottomOf="@+id/imgViewProfile"
                app:drawableStartCompat="@drawable/ic_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDocterAllDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewUserDetails">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBarDoctorList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorSize="40dp"
            app:trackColor="@color/gray"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorColor="@color/purple_700"/>

        <include
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            layout="@layout/doctor_list"            />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>