<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DoctorDetailFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/imgViewProfile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_user_image_place_holder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewFav"
                app:layout_constraintEnd_toStartOf="@+id/textViewName"/>
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_username"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toTopOf="@+id/imgViewProfile"
                app:layout_constraintBottom_toTopOf="@+id/textViewMail"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_mail"
                android:gravity="center"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toEndOf="@+id/imgViewProfile"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                app:layout_constraintBottom_toTopOf="@+id/textViewOnlineStatus"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/textViewOnlineStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_online_status"
                android:gravity="center"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textViewMail"
                app:layout_constraintTop_toBottomOf="@+id/textViewMail"
                app:layout_constraintBottom_toBottomOf="@+id/imgViewProfile"/>
            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_rate"
                android:drawablePadding="10dp"
                android:text=" 5/5"
                android:gravity="center"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cardViewFav"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFav"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="50dp"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgViewProfile"
                app:layout_constraintEnd_toStartOf="@+id/cardViewVideoCall">

                <TextView
                    android:id="@+id/textViewFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:text="@string/add_favourite"
                    app:drawableStartCompat="@drawable/ic_favorite" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBarAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:indicatorSize="20dp"
                    app:trackColor="@color/gray"
                    app:indicatorColor="@color/red"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewVideoCall"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="50dp"
                android:elevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/imgViewProfile"
                app:layout_constraintStart_toEndOf="@+id/cardViewFav">
                <TextView
                    android:id="@+id/textViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:text="@string/call"
                    app:drawableStartCompat="@drawable/ic_videocam" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>