<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:elevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textViewDoctorsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctors_list"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cardViewFavDoctorsList"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFavDoctorsList"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="50dp"
                android:elevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDoctorsList"
                app:layout_constraintEnd_toStartOf="@+id/cardViewAllDoctorsList">
                <TextView
                    android:id="@+id/textViewFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:text="@string/favourite"
                    app:drawableStartCompat="@drawable/ic_favorite" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAllDoctorsList"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="50dp"
                android:elevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDoctorsList"
                app:layout_constraintStart_toEndOf="@+id/cardViewFavDoctorsList">
                <TextView
                    android:id="@+id/textViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:text="@string/all"
                    app:drawableStartCompat="@drawable/ic_all_doctors" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDoctorList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                tools:listitem="@layout/doctor_list_item"
                tools:itemCount="10"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewFavDoctorsList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>